# setup-agent

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
Formula/: setup-agent.rb
scripts/: build.sh  install.sh  uninstall.sh
src/: config.py  constants.py  graph_state.py  main.py  model.py  shell_registry.py  workflow_builder.py
src/agents/: agent_types.py  agents.py  base_agent.py  base_custom_agent.py  base_react_agent.py  base_step_executing_agent.py  base_structured_agent.py  installer.py  planner.py  runner.py
src/agents/auditor/: agent.py  agent_types.py  prompts.py
src/agents/base_step_executing_agent/: __init__.py  base_step_executing_agent.py  constants.py  prompts.py
src/agents/installer/: agent.py  prompts.py
src/agents/planner/: agent.py  agent_types.py  prompts.py  types.py
src/agents/runner/: agent.py  prompts.py  types.py
src/cli/: app.py  cli.py
src/detect_secrets/: README.md  __init__.py  exceptions.py  settings.py  types.py
src/llm/: __init__.py  constants.py  model.py  structured_llm.py
src/middlewares/: __init__.py  parallel_tool_calls_middleware.py  personal_information_middleware.py
src/nodes/: __init__.py  base_llm_node.py  nodes.py
src/shell/: __init__.py  base_shell.py  interactive_shell.py  safe_interactive_shell.py  security_context.py  shell_registry.py  shell_types.py  types.py
src/tools/: __init__.py  ask_user_tool.py  authenticate_tool.py  prompt_user_input_tool.py  prompt_user_selection_tool.py  run_command_tool.py  use_arrow_keys_sequence.py  use_keyboard_keys.py  user_input_tool.py  websearch.py
src/user_prompts/: guidelines_selector.py  task_selector.py
src/utils/: file_loader.py  logger.py  secrets_redactor.py  singleton_meta.py
(+85 files in other folders)
