[project]
name = "devops-agent"
version = "0.1.0"
description = "AI agent for installing tools and running projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "inquirerpy>=0.3.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "markdown>=3.9",
    "pexpect>=4.9.0",
    "pre-commit>=4.3.0",
    "typer>=0.20.0",
    "unstructured>=0.18.15",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[tool.uv]
package = true

[project.scripts]
devops-agent = "cli.cli:app"