[project]
name = "devops-agent"
version = "0.1.0"
description = "AI agent for installing tools and running projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gibberish-detector>=0.1.1",
    "langchain==1.0.4",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=1.0.0",
    "langgraph==1.0.2",
    "langsmith==0.4.39",
    "markdown>=3.9",
    "pexpect>=4.9.0",
    "pre-commit>=4.3.0",
    "pyahocorasick>=2.2.0",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "unidiff>=0.7.5",
    "unstructured>=0.18.15",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[tool.uv]
package = true

[project.scripts]
devops-agent = "cli.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
detect_secrets = ["**/*.model"]